--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,18 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.mat-tab-body.mat-tab-body-active, .mat-tab-body-content, .mat-tab-body-wrapper {
+  overflow: unset !important;
+}
