--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -8,6 +8,11 @@
 
   &__team {
     padding: 50px 0;
+
+    &-header {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   &__button {
