--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,56 @@ body {
   box-sizing: border-box;
 }
 
-.mat-tab-body.mat-tab-body-active, .mat-tab-body-content, .mat-tab-body-wrapper {
+.mat-tab-body.mat-tab-body-active,
+.mat-tab-body-content,
+.mat-tab-body-wrapper {
   overflow: unset !important;
+}
+
+.player {
+  width: 33.333%;
+  cursor: pointer;
+
+  position: relative;
+
+  &:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
+
+  &-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 25px;
+    height: 25px;
+
+    border: 3px solid;
+    border-radius: 50%;
+
+    font-size: 10px;
+
+    &_0 {
+      border-color: #9e9e9e;
+    }
+
+    &_1 {
+      border-color: #d32f2f;
+    }
+
+    &_2 {
+      border-color: #fdd835;
+    }
+
+    &_3 {
+      border-color: #43a047;
+    }
+  }
 }
